[tool.poetry]
name = "pornhub-downloader"
version = "0.1.0"
description = ""
authors = ["Andy Chen <ph-downloader@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2023.12.30"
peewee = "^3.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
